# gcalendar-bill-notification

./: .gitignore  Dockerfile  README.md  config.md  docker-compose.yml  pyproject.toml
.github/workflows/: bill-agent.yml
src/: agent.py  auth.py  calendar_mcp.py  scheduler.py
